--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,8 +1,8 @@
 #静态资源路劲, 可配置相对路径和绝对路径
-static_resource_path=/home/wkzq/html
+static_resource_path=E:/html
 
 #端口
-server_port=8888
+server_port=8889
 
 #请求后缀
 request_postfix=.do
