--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,5 +1,5 @@
 #静态资源路劲, 可配置相对路径和绝对路径
-static_resource_path=E:/html
+static_resource_path=/home/wkzq/html
 
 #端口
 server_port=8889
@@ -14,4 +14,4 @@ index=/index.html
 request_handler=.do
 
 #controller包路径，配置后可通过annocation直接配置
-controller_path=com.gj.web.controller
+controller_path=bid.fese.web.controller
