修复当404时发送两次response的bug 增加了404和500页面

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -13,5 +13,10 @@ index=/index.html
 #请求处理, 可以进行请求转发
 request_handler=.do
 
+#404页面 想对于静态资源地址而言
+page_404=/404.html
+#500页面
+page_500=/500.html
+
 #controller包路径，配置后可通过annocation直接配置
 controller_path=bid.fese.web.controller
