修复post失败的bug

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,5 +7,5 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{mm:ss.SSS}-[%c]-[%p] %m%n
 
-rootLogger.level = INFO
+rootLogger.level = DEBUG
 rootLogger.appenderRef.stdout.ref = STDOUT
