修改配置 修改maven 增加log输出到文件

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,10 +2,47 @@ status = error
 dest = err
 name = PropertiesConfig
 
+property.stdFilename = fese-std-log.log
+property.assessFilename = fese-assess-log.log
+
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{mm:ss.SSS}-[%c]-[%p] %m%n
+appender.console.layout.pattern = %d{yy-MM-dd hh:mm:ss.SSS}-[%c]-[%p] %m%n
+
+appender.stdFile.type = RollingFile
+appender.stdFile.name = StdFile
+appender.stdFile.fileName = ${stdFilename}
+appender.stdFile.filePattern = target/fese-std-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.stdFile.layout.type = PatternLayout
+appender.stdFile.layout.pattern = %d %p %C{1.} [%t] %m%n
+appender.stdFile.policies.type = Policies
+appender.stdFile.policies.time.type = TimeBasedTriggeringPolicy
+appender.stdFile.policies.time.interval = 2
+appender.stdFile.policies.time.modulate = true
+appender.stdFile.policies.size.type = SizeBasedTriggeringPolicy
+appender.stdFile.policies.size.size=100MB
+
+appender.accessFile.type = RollingFile
+appender.accessFile.name = AssessFile
+appender.accessFile.fileName = ${assessFilename}
+appender.accessFile.filePattern = target/fese-std-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.accessFile.layout.type = PatternLayout
+appender.accessFile.layout.pattern = %d %p %C{1.} [%t] %m%n
+appender.accessFile.policies.type = Policies
+appender.accessFile.policies.time.type = TimeBasedTriggeringPolicy
+appender.accessFile.policies.time.interval = 2
+appender.accessFile.policies.time.modulate = true
+appender.accessFile.policies.size.type = SizeBasedTriggeringPolicy
+appender.accessFile.policies.size.size=100MB
+
+
+
 
 rootLogger.level = DEBUG
 rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.stdFile.ref = StdFile
+
+logger.requestDispatcherHandler.name = bid.fese.handler.RequestDispatcherHandler
+logger.requestDispatcherHandler.level = INFO
+logger.requestDispatcherHandler.appenderRef.accessFile.ref = AssessFile
