--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -8,12 +8,12 @@ property.assessFilename = fese-assess-log.log
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yy-MM-dd hh:mm:ss.SSS}-[%c]-[%p] %m%n
+appender.console.layout.pattern = %d-[%C{1.}]-[%p] [%t] %m%n
 
 appender.stdFile.type = RollingFile
 appender.stdFile.name = StdFile
 appender.stdFile.fileName = ${stdFilename}
-appender.stdFile.filePattern = target/fese-std-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.stdFile.filePattern = log/fese-std-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.stdFile.layout.type = PatternLayout
 appender.stdFile.layout.pattern = %d %p %C{1.} [%t] %m%n
 appender.stdFile.policies.type = Policies
@@ -26,18 +26,15 @@ appender.stdFile.policies.size.size=100MB
 appender.accessFile.type = RollingFile
 appender.accessFile.name = AssessFile
 appender.accessFile.fileName = ${assessFilename}
-appender.accessFile.filePattern = target/fese-std-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.accessFile.filePattern = log/fese-assess-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
 appender.accessFile.layout.type = PatternLayout
-appender.accessFile.layout.pattern = %d %p %C{1.} [%t] %m%n
+appender.accessFile.layout.pattern = %d %p [%t] %m%n
 appender.accessFile.policies.type = Policies
 appender.accessFile.policies.time.type = TimeBasedTriggeringPolicy
 appender.accessFile.policies.time.interval = 2
 appender.accessFile.policies.time.modulate = true
 appender.accessFile.policies.size.type = SizeBasedTriggeringPolicy
 appender.accessFile.policies.size.size=100MB
-
-
-
 
 rootLogger.level = DEBUG
 rootLogger.appenderRef.stdout.ref = STDOUT
