--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -38,8 +38,5 @@ appender.accessFile.policies.size.size=100MB
 
 rootLogger.level = DEBUG
 rootLogger.appenderRef.stdout.ref = STDOUT
-rootLogger.appenderRef.stdFile.ref = StdFile
+# rootLogger.appenderRef.stdFile.ref = StdFile
 
-logger.requestDispatcherHandler.name = bid.fese.handler.RequestDispatcherHandler
-logger.requestDispatcherHandler.level = INFO
-logger.requestDispatcherHandler.appenderRef.accessFile.ref = AssessFile
