增加了rest框架

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -22,4 +22,7 @@ page_500=/500.html
 controller_path=bid.fese.web.controller
 
 #动态请求处理器
-#dynamic_request_handler=bid.fese.handler.TesftDynamicDispatcherHandler
+dynamic_request_handler=xyz.fefine.MainDispatcherHandler
+
+#rest配置文件名称
+rest_config_file=rest.xml
