--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -36,7 +36,10 @@ appender.accessFile.policies.time.modulate = true
 appender.accessFile.policies.size.type = SizeBasedTriggeringPolicy
 appender.accessFile.policies.size.size=100MB
 
-rootLogger.level = DEBUG
+rootLogger.level = INFO
 rootLogger.appenderRef.stdout.ref = STDOUT
 # rootLogger.appenderRef.stdFile.ref = StdFile
 
+logger.requestDispatcherHandler.name = bid.fese.handler.RequestDispatcherHandler
+logger.requestDispatcherHandler.level = INFO
+logger.requestDispatcherHandler.appenderRef.accessFile.ref = AssessFile
