--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -8,7 +8,7 @@ server_port=8889
 request_postfix=.do
 
 #主页
-index=/index.html
+index=/building.html
 
 #请求处理, 可以进行请求转发， 必须为这种格式
 request_handler=.do
