更新部分代码

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,8 +2,8 @@ status = error
 dest = err
 name = PropertiesConfig
 
-property.stdFilename = fese-std-log.log
-property.assessFilename = fese-assess-log.log
+property.stdFilename = target/fese-std-log.log
+property.assessFilename = target/fese-assess-log.log
 
 appender.console.type = Console
 appender.console.name = STDOUT
@@ -13,7 +13,7 @@ appender.console.layout.pattern = %d-[%C{1.}]-[%p] [%t] %m%n
 appender.stdFile.type = RollingFile
 appender.stdFile.name = StdFile
 appender.stdFile.fileName = ${stdFilename}
-appender.stdFile.filePattern = log/fese-std-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.stdFile.filePattern = target/log/fese-std-%d{MM-dd-yy}-%i.log.gz
 appender.stdFile.layout.type = PatternLayout
 appender.stdFile.layout.pattern = %d %p %C{1.} [%t] %m%n
 appender.stdFile.policies.type = Policies
@@ -26,7 +26,7 @@ appender.stdFile.policies.size.size=100MB
 appender.accessFile.type = RollingFile
 appender.accessFile.name = AssessFile
 appender.accessFile.fileName = ${assessFilename}
-appender.accessFile.filePattern = log/fese-assess-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.accessFile.filePattern = target/log/fese-assess-%d{yy-dd-MM-HH}-%i.log.gz
 appender.accessFile.layout.type = PatternLayout
 appender.accessFile.layout.pattern = %d %p [%t] %m%n
 appender.accessFile.policies.type = Policies
@@ -36,10 +36,11 @@ appender.accessFile.policies.time.modulate = true
 appender.accessFile.policies.size.type = SizeBasedTriggeringPolicy
 appender.accessFile.policies.size.size=100MB
 
-rootLogger.level = DEBUG
+rootLogger.level = INFO
 rootLogger.appenderRef.stdout.ref = STDOUT
-# rootLogger.appenderRef.stdFile.ref = StdFile
+rootLogger.appenderRef.rolling.ref = StdFile
 
-logger.requestDispatcherHandler.name = bid.fese.handler.RequestDispatcherHandler
-logger.requestDispatcherHandler.level = INFO
-logger.requestDispatcherHandler.appenderRef.accessFile.ref = AssessFile
+#logger.rolling.name = bid.fese.handler.RequestDispatcherHandler
+#logger.rolling.level = info
+#logger.rolling.additivity = false
+#logger.rolling.appenderRef.rolling.ref = AssessFile
