--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -36,7 +36,7 @@ appender.accessFile.policies.time.modulate = true
 appender.accessFile.policies.size.type = SizeBasedTriggeringPolicy
 appender.accessFile.policies.size.size=100MB
 
-rootLogger.level = INFO
+rootLogger.level = debug
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.rolling.ref = StdFile
 
