更改了一些架构

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,45 +1,39 @@
-status = error
-dest = err
-name = PropertiesConfig
-
-property.stdFilename = target/fese-std-log.log
-property.assessFilename = target/fese-assess-log.log
-
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d-[%C{1.}]-[%p] [%t] %m%n
-
-appender.stdFile.type = RollingFile
-appender.stdFile.name = StdFile
-appender.stdFile.fileName = ${stdFilename}
-appender.stdFile.filePattern = target/log/fese-std-%d{MM-dd-yy}-%i.log.gz
-appender.stdFile.layout.type = PatternLayout
-appender.stdFile.layout.pattern = %d %p %C{1.} [%t] %m%n
-appender.stdFile.policies.type = Policies
-appender.stdFile.policies.time.type = TimeBasedTriggeringPolicy
-appender.stdFile.policies.time.interval = 2
-appender.stdFile.policies.time.modulate = true
-appender.stdFile.policies.size.type = SizeBasedTriggeringPolicy
+status=error
+dest=err
+name=PropertiesConfig
+property.stdFilename=target/fese-std-log.log
+property.assessFilename=target/fese-assess-log.log
+appender.console.type=Console
+appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%d [%C{1.}]-[%p] [%t] %m%n
+appender.stdFile.type=RollingFile
+appender.stdFile.name=StdFile
+appender.stdFile.fileName=${stdFilename}
+appender.stdFile.filePattern=target/log/fese-std-%d{MM-dd-yy}-%i.log.gz
+appender.stdFile.layout.type=PatternLayout
+appender.stdFile.layout.pattern=%d %p %C{1.} [%t] %m%n
+appender.stdFile.policies.type=Policies
+appender.stdFile.policies.time.type=TimeBasedTriggeringPolicy
+appender.stdFile.policies.time.interval=2
+appender.stdFile.policies.time.modulate=true
+appender.stdFile.policies.size.type=SizeBasedTriggeringPolicy
 appender.stdFile.policies.size.size=100MB
-
-appender.accessFile.type = RollingFile
-appender.accessFile.name = AssessFile
-appender.accessFile.fileName = ${assessFilename}
-appender.accessFile.filePattern = target/log/fese-assess-%d{yy-dd-MM-HH}-%i.log.gz
-appender.accessFile.layout.type = PatternLayout
-appender.accessFile.layout.pattern = %d %p [%t] %m%n
-appender.accessFile.policies.type = Policies
-appender.accessFile.policies.time.type = TimeBasedTriggeringPolicy
-appender.accessFile.policies.time.interval = 2
-appender.accessFile.policies.time.modulate = true
-appender.accessFile.policies.size.type = SizeBasedTriggeringPolicy
+appender.accessFile.type=RollingFile
+appender.accessFile.name=AssessFile
+appender.accessFile.fileName=${assessFilename}
+appender.accessFile.filePattern=target/log/fese-assess-%d{yy-dd-MM-HH}-%i.log.gz
+appender.accessFile.layout.type=PatternLayout
+appender.accessFile.layout.pattern=%d %p [%t] %m%n
+appender.accessFile.policies.type=Policies
+appender.accessFile.policies.time.type=TimeBasedTriggeringPolicy
+appender.accessFile.policies.time.interval=2
+appender.accessFile.policies.time.modulate=true
+appender.accessFile.policies.size.type=SizeBasedTriggeringPolicy
 appender.accessFile.policies.size.size=100MB
-
-rootLogger.level = debug
-rootLogger.appenderRef.stdout.ref = STDOUT
-rootLogger.appenderRef.rolling.ref = StdFile
-
+rootLogger.level=debug
+rootLogger.appenderRef.stdout.ref=STDOUT
+rootLogger.appenderRef.rolling.ref=StdFile
 #logger.rolling.name = bid.fese.handler.RequestDispatcherHandler
 #logger.rolling.level = info
 #logger.rolling.additivity = false
