--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -1,18 +1,18 @@
 #静态资源路劲, 可配置相对路径和绝对路径
-static_resource_path=F:/html
+static.resource.path=/Users/wkzq/code/html
 #端口
-server_port=8889
+server.port=8889
 #请求后缀
-request_postfix=.do
+request.postfix=.do
 #主页
-index=/building.html
+index=/index.html
 #请求处理, 可以进行请求转发， 必须为这种格式
-request_handler=.do
+request.handler=.do
 #404页面 想对于静态资源地址而言
-page_404=/404.html
+page.404=/404.html
 #500页面
-page_500=/500.html
+page.500=/500.html
 #controller包路径，配置后可通过annocation直接配置
-controller_path=bid.fese.web.controller
+controller.path=bid.fese.web.controller
 #动态请求处理器
-#dynamic_request_handler=bid.fese.handler.TesftDynamicDispatcherHandler
+#dynamic.request.handler=bid.fese.handler.TesftDynamicDispatcherHandler
